moving methods from profile to user
